add first fixes to project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-clock-master:-fun-time-learning",
+  "name": "clockmind-fun-time-learning",
   "private": true,
   "version": "0.0.0",
   "type": "module",
