--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
         "format": "prettier --write ./src/**/*.{tsx,ts,json}",
         "format:check": "prettier --check ./src/**/*.{tsx,ts,json}",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.2.0",
         "lucide-react": "^0.575.0",
+        "motion": "^12.34.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "tailwindcss": "^4.2.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.29.0",
+        "@babel/preset-react": "^7.28.5",
+        "@babel/preset-typescript": "^7.28.5",
         "@chromatic-com/storybook": "^5.0.1",
         "@eslint/js": "^9.39.1",
         "@storybook/addon-a11y": "^10.2.10",
@@ -29,6 +36,10 @@
         "@storybook/addon-onboarding": "^10.2.10",
         "@storybook/addon-vitest": "^10.2.10",
         "@storybook/react-vite": "^10.2.10",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.2",
+        "@testing-library/user-event": "^14.6.1",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
@@ -40,6 +51,9 @@
         "eslint-plugin-react-refresh": "^0.4.24",
         "eslint-plugin-storybook": "^10.2.10",
         "globals": "^16.5.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "playwright": "^1.58.2",
         "prettier": "^3.8.1",
         "storybook": "^10.2.10",
