--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,8 @@
     "singleAttributePerLine": true,
     "printWidth": 80,
     "endOfLine": "lf",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ]
 }
