--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
+        "lint:fix": "eslint . --ext .ts,.tsx --fix",
         "preview": "vite preview",
         "format": "prettier --write ./src/**/*.{tsx,ts,json}",
         "format:check": "prettier --check ./src/**/*.{tsx,ts,json}",
@@ -23,6 +24,7 @@
         "motion": "^12.34.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-router-dom": "^7.13.1",
         "tailwindcss": "^4.2.0"
     },
     "devDependencies": {
@@ -50,13 +52,16 @@
         "eslint": "^9.39.1",
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
+        "eslint-plugin-sort-keys-fix": "^1.1.2",
         "eslint-plugin-storybook": "^10.2.13",
+        "eslint-plugin-unused-imports": "^4.4.1",
         "globals": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
         "playwright": "^1.58.2",
         "prettier": "^3.8.1",
+        "prettier-plugin-tailwindcss": "^0.7.2",
         "storybook": "^10.2.13",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.48.0",
