--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "build-storybook": "storybook build",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "test:e2e": "playwright test",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:headed": "playwright test --headed"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.2.0",
