--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "build-storybook": "storybook build",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.2.0",
@@ -69,6 +70,7 @@
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.48.0",
         "vite": "^7.3.1",
-        "vitest": "^4.0.18"
+        "vitest": "^4.0.18",
+        "husky": "^9.1.7"
     }
 }
