--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
         "build-storybook": "storybook build",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.2.0",
         "clsx": "^2.1.1",
+        "i18next": "^23.7.6",
         "lucide-react": "^0.575.0",
         "motion": "^12.34.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-i18next": "^13.5.0",
         "react-router-dom": "^7.13.1",
         "tailwindcss": "^4.2.0"
     },
@@ -67,6 +70,7 @@
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.48.0",
         "vite": "^7.3.1",
-        "vitest": "^4.0.18"
+        "vitest": "^4.0.18",
+        "husky": "^9.1.7"
     }
 }
